2008-02-04  Marco Baringer  <mb@bese.it>


	* swank-abcl.lisp, swank-allegro.lisp, swank-backend.lisp,
	swank-clisp.lisp, swank-cmucl.lisp, swank-corman.lisp,
	swank-ecl.lisp, swank-lispworks.lisp, swank-openmcl.lisp,
	swank-sbcl.lisp, swank-scl.lisp, swank.lisp,
	contrib/swank-fancy-inspector.lisp: Remove second argument from
	swank:inspect-for-emacs. This functionality, choosing an inspector
	at runtime, was never actually used and is, now, needless
	complexity.

2008-02-04  Helmut Eller  <heller@common-lisp.net>

	Simpler code to bind 0-9 in the debugger.

	* slime.el (sldb-mode-map): When binding the keys 0-9, use eval
	instead of two macros.

2008-02-04  Helmut Eller  <heller@common-lisp.net>

	Move some functions to swank-arglist.lisp.

	* swank.lisp (length=, ensure-list, recursively-empty-p)
	(maybecall, exactly-one-p, read-softly-from-string)
	(unintern-in-home-package, valid-function-name-p): Moved to
	contrib/swank-arglist.lisp.

2008-02-03  Marco Baringer  <mb@bese.it>

	* swank.lisp (*sldb-condition-printer*): New variable.
	(safe-condition-message): Use the current binding
	of *sldb-condition-printer* to print the condition to a string.

	* slime.el (sldb-invoke-restart-by-name): New function. Invokes a
	restart by name, uses completion to read restart's name.
	(slime-define-keys sldb-mode-map): Bind
	sldb-invoke-restart-by-name to I in sldb buffers.

	* swank-loader.lisp: When loading swank delete all swank packages
	first. This protects the lisp from broken reloads of swank. Leave
	the swank-loader package so that users can set *fasl-directory*
	and *source-directory* as per the documentation.
	(lisp-version-string): On openmcl use the full
	cl:lisp-implementation-version, ccl::*openmcl-major-version* and
	ccl::*openmcl-minor-version* aren't sufficently precise to notice
	changes in openmcl's cvs.

2008-01-27  Helmut Eller  <heller@common-lisp.net>

	Make it easier to start a non-default Lisp from ELisp code.
